# parallell_course

./: CMakeLists.txt
cp1/: CMakeLists.txt  Testcp1.cpp  cp.cc
mf1/: CMakeLists.txt  TestMf.cpp
scripts/: opencv.sh
